[package]
name = "monkey-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive"] }
stacker = "0.1.15"
whoami = "1.4.1"

[profile.release]
debug = true
